# SaintCore

./: .gitignore  CMakeLists.txt  Image.cpp  README.md  ZOV.h  main.cpp  main_container.cpp  mnist_reader.cpp  notreadme.txt  visualization.cpp  zov.cpp
dir/: omarbot.txt
include/: container.h  exceptions.h  functions.h  mnist_reader.h  model.h  serialization.h  tensor.h  types.h
include/perfect_visualization/: Image.h  bmp_writer.h  image_writer.h  visualization.h
libtorch/: build-hash  build-version
libtorch/include/caffe2/core/: macros.h
libtorch/share/cmake/fbgemm/: fbgemmLibraryConfig-release.cmake  fbgemmLibraryConfig.cmake
mnist/: omarbot.txt
src/: bmp_writer.cpp  container.cpp  functions.cpp  model.cpp  serialization.cpp  tensor.cpp
tests/: test_arab_conbtainer.cpp  test_functions.cpp  test_model.cpp  test_tensor.cpp
